2007-06-29  Moritz  <moritz@g10code.com>

	* poldi-ctrl.c: Removed includes: <common/card.h>, <libscd/scd.h>,
	<common/options.h>; new includes: <common/optparse.h>,
	<scd/scd.h>, <scd-support/scd-support.h>.
	(struct poldi_ctrl_opt): Removed members: debug_sc, ctapi_driver,
	pcsc_driver, reader_port, disable_opensc, disable_ccid,
	debug_ccid_driver.
	(enum arg_opt_ids): Removed: arg_ctapi_driver, arg_pcsc_driver,
	arg_reader_port, arg_disable_ccid, arg_disable_opensc,
	arg_debug_ccid_driver, arg_require_card_switch.
	(arg_opts[]): Adjusted to arg_opt_ids changes.
	(poldi_ctrl_options_cb): Likewise.
	(cardinfo_NULL): New variable.
	(cmd_test, cmd_dump, cmd_set_key): Slightly rewritte, use new scd
	interface.
	(main): Initialize libgcrypt secure memory, removed call to
	scd_init.

	* Makefile.am: Adjusted CFLAGS/LDADD, include cmacros.am.
	(poldi_ctrl_LDADD): Removed $(GPG_ERR_LDFLAGS),$(LIBUSB_LIBS);
	added: $(LIBASSUAN_LIBS).

2005-12-11  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c: Removed some FIXMEs.

2005-12-10  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c (ask_user): Return ERR_NO_DATA in case of EOF while
	reading username, return ERR_INV_NAME in case an empty line was
	read.
	(key_file_create): Print warning instead of error message in case
	the key file does already exist; only change file owner in case
	PWENT is non-NULL.
	(main): Include new commands, removed old commands.

	(key_file_create): Open key file with O_EXCL flag set, better
	error handling.

	(struct poldi_ctrl_opt): New members: cmd_register_card,
	cmd_unregister_card, cmd_list_cards, cmd_associate,
	cmd_disassociate; removed members: cmd_add_user, cmd_remove_user.
	Implemented new commands.

	(cmd_register_card, cmd_unregister_card, cmd_list_cards,
	cmd_associate, cmd_disassociate, directory_process_cb): New
	functions.
	(cmd_add_user, cmd_remove_user): Removed functions.
	(enum arg_opt_ids): Add new symbols for new command arguments.
